fix the layout issue

--- a/GalacticPuffin/Content/Site.css
+++ b/GalacticPuffin/Content/Site.css
@@ -147,7 +147,9 @@ body {
 
 /**Footer*/
 .footer {
-    width: 940px;
+    padding-left:50px;
+    padding-right:50px;
+    /*width: 940px;*/
     margin: 0 auto;
     /*padding: 20px;*/
     font-size: 11px;
@@ -180,9 +182,12 @@ body {
 
 /**Tile*/
 .tile1 {
+    float: none;
     padding: 10px;
     border: none;
     text-align: center;
+    max-width: 360px;
+    display: inline-block;
     /*height: 30%;*/
 }
     .tile1 .card {
@@ -331,4 +336,10 @@ body {
     text-align: left;
     border-bottom: 3px solid mediumvioletred;
     padding: 20px;
+}
+.slick-next {
+     right: 25px; 
+}
+.slick-pre {
+    left: 25px;
 }
